timetable report completed

--- a/themes/default/report/timetable.html
+++ b/themes/default/report/timetable.html
@@ -76,14 +76,22 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td class="text-center" scope="col">TEST</td>
-                                            <td class="text-center">TEST</td>
-                                            <td class="text-right">
-                                                <a href="{{ app.url }}" target="_blank"><button class="btn btn-sm btn-primary">View</button></a>
-                                                <a href=""><button class="btn btn-sm btn-danger">Remove</button></a>
-                                            </td>
-                                        </tr>
+                                        {% if reports.class %}
+                                            {% for report in reports.class %}
+                                            <tr>
+                                                <td class="text-center">{{ report.generated_on }}</td>
+                                                <td class="text-center" scope="col">{{ report.user.username }}</td>
+                                                <td class="text-right">
+                                                    <a href="{{ report.path }}" target="_blank"><button class="btn btn-sm btn-primary">View</button></a>
+                                                    <button onClick="onClick_DeleteReport('{{ report.id }}')" class="btn btn-sm btn-danger">Remove</button>
+                                                </td>
+                                            </tr>
+                                            {% endfor %}
+                                        {% else %}
+                                            <tr>
+                                                <td class="text-center" scope="col" colspan="3">No Class Attendance Reports Found</td>
+                                            </tr>
+                                        {% endif %}
                                     </tbody>
                                 </table>
                             </div>
@@ -97,14 +105,22 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td class="text-center" scope="col">TEST</td>
-                                            <td class="text-center">TEST</td>
-                                            <td class="text-right">
-                                                <a href="{{ app.url }}" target="_blank"><button class="btn btn-sm btn-primary">View</button></a>
-                                                <a href=""><button class="btn btn-sm btn-danger">Remove</button></a>
-                                            </td>
-                                        </tr>
+                                        {% if reports.staff %}
+                                            {% for report in reports.staff %}
+                                            <tr>
+                                                <td class="text-center">{{ report.generated_on }}</td>
+                                                <td class="text-center" scope="col">{{ report.user.username }}</td>
+                                                <td class="text-right">
+                                                    <a href="{{ report.path }}" target="_blank"><button class="btn btn-sm btn-primary">View</button></a>
+                                                    <button onClick="onClick_DeleteReport('{{ report.id }}')" class="btn btn-sm btn-danger">Remove</button>
+                                                </td>
+                                            </tr>
+                                            {% endfor %}
+                                        {% else %}
+                                            <tr>
+                                                <td class="text-center" scope="col" colspan="3">No Class Attendance Reports Found</td>
+                                            </tr>
+                                        {% endif %}
                                     </tbody>
                                 </table>
                             </div>
@@ -138,10 +154,13 @@
             dataType: 'json',
             success: (Response) => {
                 if ( Response.status === 'success' ) {
-                    console.log( Response )
-                    alertify.alert("Success", "Report Generated Successfully")
+                    alertify.alert("Success", "Report Generated Successfully").set({
+                        'closable': false,
+                        'onok': () => {
+                            location.reload()
+                        }
+                    })
                 } else {
-                    console.log( Response )
                     alertify.alert("Failed", Response.error)
                 }
             },
@@ -155,9 +174,9 @@
 
     Generate_StaffTimetable = () => {
 
-    // PAYLOAD
-    let formData = new FormData()
-    formData.append("staff_id", $("#inpt-staff").val())
+        // PAYLOAD
+        let formData = new FormData()
+        formData.append("staff_id", $("#inpt-staff").val())
 
         // AJAX
         $.ajax({
@@ -169,9 +188,12 @@
             dataType: 'json',
             success: (Response) => {
                 if ( Response.status === 'success' ) {
-                    console.log("SUCCESS")
-                    console.log( Response )
-                    alertify.alert("Success", "Report Generated Successfully")
+                    alertify.alert("Success", "Report Generated Successfully").set({
+                        'closable': false,
+                        'onok': () => {
+                            location.reload()
+                        }
+                    })
                 } else {
                     alertify.alert("Failed", Response.error)
                 }
@@ -181,7 +203,38 @@
                 console.log( e.responseText )
             }
         })
+    }
 
+    onClick_DeleteReport = (id) => {
+
+        // PAYLOAD
+        let formData = new FormData()
+        formData.append("report_id", id)
+
+        // AJAX
+        $.ajax({
+            url: "{{ app.url }}/report/delete_report_ajax",
+            method: 'POST',
+            data: formData,
+            processData: false,
+            contentType: false,
+            dataType: 'json',
+            success: Response => {
+                if ( Response.status === 'success' ) {
+                    alertify.alert("Success", "Report Deleted Successfully").set({
+                        'closable': false,
+                        'onok': () => {
+                            location.reload()
+                        }
+                    })
+                } else {
+                    alertify.alert("Failed", Response.error)
+                }
+            },
+            error: e => {
+                console.log( e.responseText )
+            }
+        })
     }
 
 </script>
