--- a/themes/default/report/attendance.html
+++ b/themes/default/report/attendance.html
@@ -160,8 +160,7 @@
         });
     });
 
-
-
+    // GENERATE CLASS ATTENDANCE REPORT
     Generate_ClassAttendance = () => {
 
         // PAYLOAD
@@ -197,8 +196,7 @@
 
     }
 
-
-
+    // GENERATE STAFF ATTENDANCE REPORT
     Generate_StaffAttendance = () => {
 
         // PAYLOAD
@@ -233,7 +231,7 @@
 
     }
 
-
+    // DELETE REPORT
     onClick_DeleteReport = (id) => {
 
         // PAYLOAD
@@ -265,6 +263,5 @@
             }
         })
     }
-
 
 </script>
