health add modifications

--- a/themes/default/common/footer.html
+++ b/themes/default/common/footer.html
@@ -12,6 +12,7 @@
 	<!-- DATA TABLES -->
 	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/dataTables.min.js"></script>
 	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/dataTables.bootstrap4.min.js"></script>
+	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/datatables.buttons.min.js"></script>
 
 	<!-- DATE TIME -->
 	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/tempusdominus-bootstrap-4.min.js"></script>
