--- a/themes/default/common/header.html
+++ b/themes/default/common/header.html
@@ -21,14 +21,16 @@
 	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/bootstrap-select.min.css" />
 
 	<!-- DATA TABLES -->
-	<!-- <link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/dataTables.min.css" > -->
+	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/dataTables.min.css" >
+	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/dataTables.jquery.min.css" />
 	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/dataTables.bootstrap4.min.css" />
+	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/dataTables.buttons.min.css" />
 
 	<!-- ALERTIFY -->
 	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/alertify.min.css" />
 	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/alertify.default.min.css" />
 	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/alertify.semantic.min.css" />
-	<!-- <link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/alertify.bootstrap.min.css" /> -->
+	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/alertify.bootstrap.min.css" />
 	
 
 	<!-- CSS : LOCAL -->
