--- a/themes/default/student/index.html
+++ b/themes/default/student/index.html
@@ -98,8 +98,8 @@
 
                         <div class="col-12">
                             <div class="row">
-                                <div class="col chart-bg pt-3" id="chart-1"></div>
-                                <div class="col chart-bg pt-3" id="chart-2"></div>
+                                <div class="col-7 chart-bg pt-3" id="chart-1"></div>
+                                <div class="col-5 chart-bg pt-3" id="chart-2"></div>
                             </div>
                         </div>
 
@@ -145,7 +145,7 @@
 
     let options2 = {
         chart: {
-            width: 600,
+            width: 550,
             type: 'pie',
         },
         title: {
